# argparser

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ArgParser.h  BoolArg.h  Help.h  IntArg.h  StringArg.h
src/: ArgParser.cpp  BoolArg.cpp  IntArg.cpp  StringArg.cpp
tests/: Makefile  argparser_test.cpp
